# CMake_Shared_library

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  StringClass.cpp  StringClass.hpp
